--- a/pytest.ini
+++ b/pytest.ini
@@ -17,6 +17,7 @@ markers =
     fails_on_mod_proxy_fcgi
     fails_on_rgw
     fails_on_s3
+    fails_on_s3proxy
     fails_with_subdomain
     group
     group_policy
