--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ markers =
     bucket_encryption
     checksum
     cloud_transition
+    cors
     encryption
     fails_on_aws
     fails_on_dbstore
