--- a/pytest.ini
+++ b/pytest.ini
@@ -19,6 +19,7 @@ markers =
     fails_on_rgw
     fails_on_s3
     fails_on_s3proxy
+    fails_on_s3proxy_azureblob
     fails_with_subdomain
     group
     group_policy
