Skip tests which fail on Minio

--- a/pytest.ini
+++ b/pytest.ini
@@ -20,6 +20,7 @@ markers =
     fails_on_s3
     fails_on_s3proxy
     fails_on_s3proxy_azureblob
+    fails_on_s3proxy_minio
     fails_on_s3proxy_nio2
     fails_with_subdomain
     group
